--- a/frontend/css/login.css
+++ b/frontend/css/login.css
@@ -100,7 +100,12 @@ body {
     top: -15px;
     left: 0;
 }
-
+@media (max-width:800px) {
+    .form-container{
+        width: 90%;
+        height: 90%;
+    }
+}
 
 
 /* for gradient effect  */
