--- a/frontend/css/login.css
+++ b/frontend/css/login.css
@@ -103,7 +103,12 @@ body {
 @media (max-width:800px) {
     .form-container{
         width: 90%;
-        height: 90%;
+        height: 87%;
+        padding-left: 20px;
+    }
+    .form-control input{
+        width: 90%;
+        padding: 10px 0;
     }
 }
 
