--- a/frontend/css/login.css
+++ b/frontend/css/login.css
@@ -100,6 +100,18 @@ body {
     top: -15px;
     left: 0;
 }
+
+/* for demo user  */
+#demo {
+    position: absolute;
+    bottom: 30px;
+    width: 15%;
+    text-align: center;
+    right: 14px;
+    text-decoration: none;
+    color: rgb(87, 47, 34);
+}
+
 @media (max-width:800px) {
     .form-container{
         width: 85%;
@@ -109,6 +121,12 @@ body {
     .form-control input{
         width: 90%;
         padding: 10px 0;
+    }
+    #demo {
+        bottom:10px;
+        left: 10px;
+        right: auto;
+        width: 90px;
     }
 }
 
