--- a/frontend/css/welcome.css
+++ b/frontend/css/welcome.css
@@ -12,6 +12,7 @@ body {
     overflow: hidden;
     margin: 0;
     font-family: 'Ubuntu' , sans-serif;
+    background-color: rgb(212, 178, 142)
 }
 .container{
     background-color: rgb(212, 178, 142);
@@ -44,15 +45,18 @@ body {
     cursor: pointer;
     transform: all 0.2s ease;
 }
-a.nav-option {
+a.issued {
     text-decoration: none;
     color: #fff;
+    font-family: 'Ubuntu' , sans-serif;
+    font-size: 18px;
+    font-weight: bold;
 }
 .logo {
     font-size: 23px;
 }
 .nav-div.content{
-    column-gap: 50px;
+    column-gap: 40px;
 }
 
 /* styling dashboard items  */
@@ -60,17 +64,7 @@ a.nav-option {
     margin-top: 10%;
     display: flex;
     align-items: center;
-    justify-content: space-around;
-    width:auto;
-    height: 45%;
-    
-}
-.dashboard-item {
-    background-color: rgb(183, 153, 118);
-    height: 90%;
-    width: 300px;
-    box-shadow: 5px 10px 25px rgb(45, 23, 12);
-    text-align: center;
+    justify-content: space-around;  
 }
 .dashboard-item {
     display: flex;
@@ -79,16 +73,40 @@ a.nav-option {
     align-items: center;
     border: 2px solid rgba(159, 126, 86, 0.7);
     cursor: pointer;
+    background-color: rgb(183, 153, 118);
+    height: 90%;
+    width: 300px;
+    box-shadow: 5px 10px 25px rgb(45, 23, 12);
+    text-align: center;
 }
 .dashboard-item i {
     font-size: 60px;
     margin-bottom: 25%;
     margin-top: 30%;
 }
+.space {
+    width: 100%;
+    height: 30px;
+}
 
 /* when navigation option is active  */
 .nav-option.active{
     border-bottom: 2px solid rgb(212, 178, 142);
     font-size: 20px;
-    padding: 10px;
+    padding-bottom: 10px;
+}
+.dashboard-item:active{
+    transform: scale(0.98);
+}
+
+/* adjusting to different screen sizes  */
+@media (max-width:800px) {
+    body {
+        overflow-y: auto;
+    }
+    .dashboard {
+        flex-direction: column;
+        height: 90%;
+        row-gap: 20px;
+    }
 }
